0031573: Visualization - Do not show seam edge for shading presentation with boundary edges in VTK